--- a/locale/es_ES.po
+++ b/locale/es_ES.po
@@ -14,6 +14,10 @@ msgctxt "field:carrier.api,redyser_email:"
 msgid "Redyser Email"
 msgstr "Correo Redyser"
 
+msgctxt "field:carrier.api,redyser_email_cc:"
+msgid "Redyser CC Email"
+msgstr "Correo CC Redyser"
+
 msgctxt "field:carrier.api,redyser_filename:"
 msgid "Redyser Filename"
 msgstr "Nombre fichero Redyser"
@@ -139,8 +143,12 @@ msgid "Package"
 msgstr "Paquete"
 
 msgctxt "help:carrier.api,redyser_email:"
-msgid "Redyser TO email"
-msgstr "Correo TO Redyser"
+msgid "Redyser email, separated by comma"
+msgstr "Correo Redyser, separado por coma"
+
+msgctxt "help:carrier.api,redyser_email_cc:"
+msgid "Redyser CC email, separated by comma"
+msgstr "Correo CC Redyser, separado por coma"
 
 msgctxt "help:carrier.api,redyser_filename:"
 msgid "Prefix Redyser Filename"
