--- a/locale/ca_ES.po
+++ b/locale/ca_ES.po
@@ -118,6 +118,10 @@ msgctxt "field:carrier.api.redyser_offline,shipment:"
 msgid "Shipment"
 msgstr "Albarà"
 
+msgctxt "field:carrier.api.redyser_offline,shipment_state:"
+msgid "Shipment State"
+msgstr "Estat albarà"
+
 msgctxt "field:carrier.api.redyser_offline,state:"
 msgid "State"
 msgstr "Estat"
@@ -225,6 +229,34 @@ msgstr "Correu electrònic"
 msgctxt "selection:carrier.api,redyser_send_method:"
 msgid "FTP"
 msgstr "FTP"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Assigned"
+msgstr "Reservat"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Canceled"
+msgstr "Cancel·lat"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Done"
+msgstr "Finalitzat"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Draft"
+msgstr "Esborrany"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Packed"
+msgstr "Empaquetat"
+
+msgctxt "selection:carrier.api.redyser_offline,shipment_state:"
+msgid "Waiting"
+msgstr "En espera"
 
 msgctxt "selection:carrier.api.redyser_offline,state:"
 msgid "Done"
